--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -5,10 +5,10 @@
     android:orientation="vertical">
 
     <TextView
+        android:id="@+id/textview_question"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="25dp"
-        android:text="@string/text_question" />
+        android:padding="25dp" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -27,6 +27,26 @@
             android:layout_height="wrap_content"
             android:text="@string/button_false"/>
 
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <ImageButton
+            android:id="@+id/button_prev"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@mipmap/arrow_left"
+            android:contentDescription="Prev"/>
+
+        <ImageButton
+            android:id="@+id/button_next"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@mipmap/arrow_right"
+            android:contentDescription="@string/button_next"/>
     </LinearLayout>
 
 </LinearLayout>
