--- a/app/src/main/res/layout-land/activity_quiz.xml
+++ b/app/src/main/res/layout-land/activity_quiz.xml
@@ -36,12 +36,15 @@
 
     </LinearLayout>
 
+
+
     <ImageButton
         android:id="@+id/button_next"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right|bottom"
         android:src="@mipmap/arrow_right"
+        android:text="@string/button_next"
         android:contentDescription="@string/button_next"/>
 
     <ImageButton
@@ -50,6 +53,14 @@
         android:layout_height="wrap_content"
         android:layout_gravity="left|bottom"
         android:src="@mipmap/arrow_left"
+        android:text="@string/button_prev"
         android:contentDescription="@string/button_prev"/>
+
+    <Button
+        android:id="@+id/button_cheat"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/button_cheat"
+        android:layout_gravity="center_horizontal|bottom"/>
 
 </FrameLayout>
