--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -29,6 +29,13 @@
 
     </LinearLayout>
 
+    <Button
+        android:id="@+id/button_cheat"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/button_cheat"/>
+
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -39,6 +46,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@mipmap/arrow_left"
+            android:text="@string/button_prev"
             android:contentDescription="Prev"/>
 
         <ImageButton
@@ -46,6 +54,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@mipmap/arrow_right"
+            android:text="@string/button_next"
             android:contentDescription="@string/button_next"/>
     </LinearLayout>
 
